# sage_ini

./: .gitignore  .pre-commit-config.yaml  .sagelint.template  README.md  pyproject.toml  sage-lint-cli.spec  sage-lint-ui.spec  sage-ui.spec  sage-wiki.spec
.github/workflows/: ci.yml
docs/: cookbook.md
examples/: build_gondor_fighter_horde.py  damage_calc.py  duel.py  duel_realtime.py  rank_levels.py
sage_edain/: __init__.py  __main__.py  bases.py  graph.py  model.py  powers.py  profile.py  server.py
sage_edain/ui/: app.js  index.html  style.css
sage_ini/: __init__.py  __main__.py  loader.py  player_diff.py  stats.py  strings.py  suggest.py  walk.py
sage_ini/model/: __init__.py  behaviors.py  data_blocks.py  definitions.py  draw.py  enums.py  fxlist.py  game.py  ini_objects.py  livingworld.py  misc_blocks.py  nuggets.py  objects.py  particles.py  state.py  types.py  ui.py  xref.py
sage_ini/parser/: __init__.py  ast.py  blockparser.py  diagnostics.py  io.py  keywords.py  lexer.py  location.py  printer.py
sage_lint/: __init__.py  __main__.py  analysis.py  baseline.py  cli.py  config.py  fixer.py  formatter.py  linter.py  suppressions.py
sage_lint/commands/: diff.py  serve.py
sage_lint/plugins/sublime/: README.md  (+11 more)
sage_lint/rules/: __init__.py  assets.py  base.py  commandbutton.py  commandset.py  definitions.py  macros.py  map_ini.py  module_ops.py  module_refs.py  modules.py  references.py  respawn.py  schema.py  strings.py
sage_map/: __init__.py  diff.py  linter.py  model.py  properties.py  scripts.py
sage_ui/: __init__.py  app.py  browser.py  extract.py  layout.py  object_browser.py  registry.py  unit_panel.py
sage_utils/: __init__.py  config.py  sources.py  styles.py  textures.py  views.py  widgets.py
sage_wiki/: __init__.py  app.py  archetypes.py  armorsets.py  credentials.py  diff.py  images.py  infobox.py  mapping.py  names.py  pagegen.py  versions.py  weapons.py
sage_wiki/wiki/: __init__.py  client.py
tests/: conftest.py  test_analysis.py  test_archetypes.py  test_blockparser.py  test_config.py  test_conversion.py  test_corpus.py  test_corpus_noise.py  test_daemon.py  test_definitions.py  test_diff.py  test_images.py  test_includes.py  test_io.py  test_lexer.py  test_loader.py  test_objects.py  test_pagegen.py  test_printer.py  test_public_api.py  test_rules.py  test_sage_edain.py  test_sage_ini_cli.py  test_sage_lint.py  test_sage_map.py  test_sage_map_diff.py  test_sage_map_linter.py  test_sage_map_model.py  test_sage_ui.py  test_sage_utils.py  test_state.py  test_stats.py  test_strings.py  test_sublime_syntax.py  test_suppressions.py  test_textures.py  test_versions.py  test_walk.py  test_weapons.py  test_wiki_diff.py  (+1 more)
tools/: categorize_roots.py  conversion_errors.py  find_imbalance.py  missing_attributes.py  module_coverage.py  opensage_field_diff.py  reference_audit.py  scan_bare_lines.py  scan_block_keywords.py  show_diags.py  show_diags_expanded.py  show_tree.py  string_field_audit.py
(+6 files in other folders)
